--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,23 @@
-asgiref==3.2.10
-beautifulsoup4==4.9.1
+appdirs==1.4.3
+asgiref==3.2.7
+astroid==2.4.1
+autopep8==1.5.1
+certifi==2020.4.5.1
+distlib==0.3.0
 Django==3.0.7
-django-bootstrap4==2.1.1
-Pillow==7.1.2
-psycopg2==2.8.5
-pytz==2020.1
-soupsieve==2.0.1
+filelock==3.0.12
+gunicorn==20.0.4
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+pipenv==2018.11.26
+pycodestyle==2.5.0
+pylint==2.5.2
+pytz==2019.3
+six==1.14.0
 sqlparse==0.3.1
+toml==0.10.0
+virtualenv==20.0.17
+virtualenv-clone==0.5.4
+whitenoise==5.1.0
+wrapt==1.12.1
