--- a/requirements.txt
+++ b/requirements.txt
@@ -2,22 +2,30 @@ appdirs==1.4.3
 asgiref==3.2.7
 astroid==2.4.1
 autopep8==1.5.1
+beautifulsoup4==4.9.1
 certifi==2020.4.5.1
+chardet==3.0.4
 distlib==0.3.0
+dj-database-url==0.5.0
 Django==3.0.7
+django-bootstrap4==2.1.1
 filelock==3.0.12
-gunicorn==20.0.4
+idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+Pillow==7.1.2
 pipenv==2018.11.26
+psycopg2==2.8.5
 pycodestyle==2.5.0
 pylint==2.5.2
 pytz==2019.3
+requests==2.24.0
 six==1.14.0
+soupsieve==2.0.1
 sqlparse==0.3.1
 toml==0.10.0
+urllib3==1.25.9
 virtualenv==20.0.17
 virtualenv-clone==0.5.4
-whitenoise==5.1.0
 wrapt==1.12.1
